--- a/taskapp/taskapp/Views/Home/Index.cshtml
+++ b/taskapp/taskapp/Views/Home/Index.cshtml
@@ -1,8 +1,44 @@
-﻿@{
+﻿@model taskapp.Models.TaskItem 
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4 text-center">Welcome</h1>
+</div>
+<hr />
+<div class="container">
+    <div class="col">
+        <form asp-action="Create" asp-controller="TaskItems" method="post" class="mt-3">
+            <div asp-validation-summary="All" class="text-danger">
+            </div>
+            <div class="form-group">
+                <label asp-for="Title"></label>
+                <div class="">
+                    <input asp-for="Title" class="form-control">
+                    <span asp-validation-for="Title" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="Description"></label>
+                <div class="">
+                    <input asp-for="Description" class="form-control">
+                    <span asp-validation-for="Description" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="text-right">
+                    <button type="submit" class="btn btn-outline-dark" style="width:auto">
+                        Create New Task
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+
+<div class="text-right container">
+    <a class="nav-link text-dark" asp-area="" asp-controller="TaskItems" asp-action="Index">My Tasks</a>
 </div>
