--- a/taskapp/taskapp/Views/Home/Index.cshtml
+++ b/taskapp/taskapp/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4 text-center">Welcome</h1>
+    <h1 class="display-4 text-center">Welcome - Publish Profile</h1>
 </div>
 <hr />
 <div class="container">
